feat: add new api GetShorturl, GetLongurl
