# internal/server/grpc.go
@@ -1,9 +1,10 @@
 package server
 
 import (
-	v1 "shorturl/api/helloworld/v1"
-	"shorturl/internal/conf"
-	"shorturl/internal/service"
+	v1 "github.com/flightzw/shorturl/api/shorturl/v1"
+
+	"github.com/flightzw/shorturl/internal/conf"
+	"github.com/flightzw/shorturl/internal/service"
 
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
@@ -11,7 +12,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, shorturl *service.ShorturlService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -27,6 +28,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
+	v1.RegisterShorturlServer(srv, shorturl)
 	return srv
 }
