# internal/server/http.go
@@ -1,20 +1,23 @@
 package server
 
 import (
-	v1 "shorturl/api/helloworld/v1"
-	"shorturl/internal/conf"
-	"shorturl/internal/service"
+	v1 "github.com/flightzw/shorturl/api/shorturl/v1"
+
+	"github.com/flightzw/shorturl/internal/conf"
+	"github.com/flightzw/shorturl/internal/service"
 
 	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/logging"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, shorturl *service.ShorturlService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
+			logging.Server(logger),
 		),
 	}
 	if c.Http.Network != "" {
@@ -27,6 +30,7 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+	// v1.RegisterGreeterHTTPServer(srv, greeter)
+	v1.RegisterShorturlHTTPServer(srv, shorturl)
 	return srv
 }
